fix: enable external redis cluster for harbor
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/argocd-helm-charts/harbor/templates/redis.yaml
+++ b/argocd-helm-charts/harbor/templates/redis.yaml
@@ -1,7 +1,7 @@
 apiVersion: redis.redis.opstreelabs.in/v1beta2
 kind: RedisCluster
 metadata:
-  name: harbor-redis-cluster
+  name: {{ .Values.redis.name }}
 spec:
   clusterSize: {{ .Values.redis.replicas }}
   clusterVersion: v7
