fix: change redis cluster to redis replication
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/argocd-helm-charts/harbor/templates/redis.yaml
+++ b/argocd-helm-charts/harbor/templates/redis.yaml
@@ -1,5 +1,5 @@
 apiVersion: redis.redis.opstreelabs.in/v1beta2
-kind: RedisCluster
+kind: RedisReplication
 metadata:
   name: {{ .Values.redis.name }}
 spec:
