--- a/argocd-helm-charts/harbor/templates/redis.yaml
+++ b/argocd-helm-charts/harbor/templates/redis.yaml
@@ -4,8 +4,6 @@ metadata:
   name: {{ .Values.redis.name }}
 spec:
   clusterSize: {{ .Values.redis.replicas }}
-  clusterVersion: v7
-  persistenceEnabled: true
   podSecurityContext:
     runAsUser: 1000
     fsGroup: 1000
@@ -14,18 +12,18 @@ spec:
     imagePullPolicy: IfNotPresent
     resources:
       requests:
-        cpu: 101m
+        cpu: null
         memory: 128Mi
       limits:
         cpu: 101m
         memory: 256Mi
   redisExporter:
-    enabled: false
+    enabled: true
     image: quay.io/opstree/redis-exporter:v1.48.0
-    imagePullPolicy: Always
+    imagePullPolicy: IfNotPresent
     resources:
       requests:
-        cpu: 100m
+        cpu: null
         memory: 128Mi
       limits:
         cpu: 100m
@@ -35,13 +33,6 @@ spec:
     volumeClaimTemplate:
       spec:
         # storageClassName: standard
-        accessModes: ["ReadWriteOnce"]
-        resources:
-          requests:
-            storage: {{ .Values.redis.storage }}
-    nodeConfVolume: true
-    nodeConfVolumeClaimTemplate:
-      spec:
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
