fix: switch redis replication to singleton redis
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/argocd-helm-charts/harbor/templates/redis.yaml
+++ b/argocd-helm-charts/harbor/templates/redis.yaml
@@ -1,9 +1,8 @@
 apiVersion: redis.redis.opstreelabs.in/v1beta2
-kind: RedisReplication
+kind: Redis
 metadata:
   name: {{ .Values.redis.name }}
 spec:
-  clusterSize: {{ .Values.redis.replicas }}
   podSecurityContext:
     runAsUser: 1000
     fsGroup: 1000
