feat : using subchart pattern for CrossPlane Helm charts | Making infrastructure provisioning using CrossPlane idempotent | Updating default version for Kubernetes and ClusterAPI components
Signed-off-by: Archisman <archisman@obmondo.com>

--- a/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureMachineTemplate.yaml
+++ b/argocd-helm-charts/capi-cluster/charts/azure/templates/AzureMachineTemplate.yaml
@@ -6,10 +6,12 @@ spec:
   template:
     spec:
       vmSize: {{ .Values.controlPlane.vmSize }}
-      {{- if .Values.imageID }}
       image:
-        id: {{ .Values.imageID }}
-      {{- end }}
+        marketplace:
+          offer: {{ .Values.canonicalUbuntuImage.offer }}
+          publisher: Canonical
+          sku: {{ .Values.canonicalUbuntuImage.sku }}
+          version: latest
       osDisk:
         diskSizeGB: {{ .Values.controlPlane.diskSizeGB }}
         osType: Linux
@@ -34,10 +36,12 @@ spec:
   template:
     spec:
       vmSize: {{ $nodeGroup.vmSize }}
-      {{- if $.Values.imageID }}
       image:
-        id: {{ $.Values.imageID }}
-      {{- end }}
+        marketplace:
+          offer: {{ $.Values.canonicalUbuntuImage.offer }}
+          publisher: Canonical
+          sku: {{ $.Values.canonicalUbuntuImage.sku }}
+          version: latest
       osDisk:
         diskSizeGB: {{ $nodeGroup.diskSizeGB }}
         osType: Linux
