--- a/argocd-helm-charts/crossplane-compositions/Chart.yaml
+++ b/argocd-helm-charts/crossplane-compositions/Chart.yaml
@@ -1,3 +1,9 @@
 apiVersion: v2
 name: crossplane-compositions
 version: 1.0.0
+
+dependencies:
+  - name: azure
+    version: 1.0.0
+    repository: "file://charts/azure"
+    condition: azure.enable
