--- a/argocd-helm-charts/crossplane-providers-and-functions/templates/functions.yaml
+++ b/argocd-helm-charts/crossplane-providers-and-functions/templates/functions.yaml
@@ -7,4 +7,20 @@ kind: Function
 metadata:
   name: patch-and-transform
 spec:
-  package: xpkg.crossplane.io/crossplane-contrib/function-patch-and-transform:v0.8.2
+  package: xpkg.crossplane.io/crossplane-contrib/function-patch-and-transform:v0.9.0
+
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Function
+metadata:
+  name: go-templating
+spec:
+  package: xpkg.crossplane.io/crossplane-contrib/function-go-templating:v0.10.0
+
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Function
+metadata:
+  name: auto-ready
+spec:
+  package: xpkg.crossplane.io/crossplane-contrib/function-auto-ready:v0.5.0
