chore(helm-charts): add and update few default values in argo-cd and sealed-secrets apps
Signed-off-by: Sidharth Jawale <sidharth@obmondo.com>

--- a/argocd-helm-charts/argo-cd/values.yaml
+++ b/argocd-helm-charts/argo-cd/values.yaml
@@ -91,6 +91,25 @@ argo-cd:
       serviceMonitor:
         enabled: true
 
+  configs:
+    cm:
+      # For ArgoCD-CrossPlane integration, we need to use annotation based application resource
+      # tracking.
+      #
+      # You ask why? Let me explain :
+      #
+      # Suppose, we define an XR claim (which is namespace scoped) in our git repository. The
+      # 'infrastructure' ArgoCD App is tracking this XR Claim.
+      # The XR Claim will dynamically generate an XR (which is cluster scoped). And this XR will
+      # derive the 'argocd.argoproj.io/instance' label from its parent XR Claim.
+      #
+      # So, the situation is : we have a dynamically generated XR, not defined in git, but being
+      # tracked by ArgoCD, because of that derived label.
+      # This will cause the 'infrastructure' ArgoCD App to be always out of sync. Additionally,
+      # if someone syncs the 'infrastructure' ArgoCD App, with pruning enabled, then ArgoCD will
+      # delete those XRs.
+      application.resourceTrackingMethod: annotation
+
 kubeaidAppProject:
   enabled: true
 
