--- a/argocd-helm-charts/sealed-secrets/values.yaml
+++ b/argocd-helm-charts/sealed-secrets/values.yaml
@@ -14,6 +14,7 @@ sealed-secrets:
       drop: ["ALL"]
     seccompProfile:
       type: RuntimeDefault
+  fullnameOverride: sealed-secrets-controller
 networkpolicies: false
 backup:
   schedule: "5 4 * * *"
