Added the wiki and script to build opendesk

--- a/argocd-helm-charts/opendesk/values.yaml
+++ b/argocd-helm-charts/opendesk/values.yaml
@@ -1,7 +1,11 @@
-opendesk:
-  argo:
-    project: default
-    destination:
-      namespace: opendesk
-    source:
-      targetRevision: v1.6.0
+global:
+  domain: abc.com
+  mailDomain: mail.abc.com
+smtp:
+  dkim:
+    key:
+      secret:
+        name: "opendesk-dkimpy-milter"
+        key: "dkim.key"
+    selector: "default"
+    useED25519: false
