--- a/argocd-helm-charts/netbird/templates/postgresql-coturn.yaml
+++ b/argocd-helm-charts/netbird/templates/postgresql-coturn.yaml
@@ -1,14 +1,14 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Cluster
 metadata:
-  {{ if (.Values.postgresql).recover }}
-  name: netbird-pgsql-recover
+  {{ if (.Values.externalDatabases.coturn).recover }}
+  name: coturn-pgsql-recover
   {{ else }}
-  name: netbird-pgsql
+  name: coturn-pgsql
   {{ end }}
 spec:
-  instances: {{ ((.Values.postgresql).instance) | default 1 }}
-  {{ if (.Values.postgresql).recover }}
+  instances: {{ ((.Values.externalDatabases.coturn).instance) | default 1 }}
+  {{ if (.Values.externalDatabases.coturn).recover }}
   bootstrap:
     recovery:
       source: netbird-pgsql
@@ -24,22 +24,22 @@ spec:
   {{ end }}
   resources:
     limits:
-      memory: {{ (((.Values.postgresql).resources).limits).memory | default "800Mi" }}
+      memory: {{ (((.Values.externalDatabases.coturn).resources).limits).memory | default "800Mi" }}
     requests:
-      memory: {{ (((.Values.postgresql).resources).requests).memory | default "500Mi" }}
-      cpu: {{ (((.Values.postgresql).resources).requests).cpu | default "100m" }}
+      memory: {{ (((.Values.externalDatabases.coturn).resources).requests).memory | default "500Mi" }}
+      cpu: {{ (((.Values.externalDatabases.coturn).resources).requests).cpu | default "100m" }}
   storage:
-    size: {{ (.Values.postgresql).size }}
-    {{- if (.Values.postgresql).storageClass }}
-    storageClass: {{ (.Values.postgresql).storageClass }}
+    size: {{ (.Values.externalDatabases.coturn).size }}
+    {{- if (.Values.externalDatabases.coturn).storageClass }}
+    storageClass: {{ (.Values.externalDatabases.coturn).storageClass }}
     {{- end }}
-  {{- if (.Values.postgresql).recover }}
+  {{- if (.Values.externalDatabases.coturn).recover }}
   externalClusters:
     - name: netbird-pgsql
       barmanObjectStore:
-        destinationPath: {{ ((.Values.postgresql).backup).destinationPath }}
-        endpointURL: {{ ((.Values.postgresql).backup).endpointURL }}
-        {{- if eq ((.Values.postgresql).backup).cloud "aws" }}
+        destinationPath: {{ ((.Values.externalDatabases.coturn).backup).destinationPath }}
+        endpointURL: {{ ((.Values.externalDatabases.coturn).backup).endpointURL }}
+        {{- if eq ((.Values.externalDatabases.coturn).backup).cloud "aws" }}
         s3Credentials:
           accessKeyId:
             name: netbird-pgsql-postgres-pod-env
@@ -48,7 +48,7 @@ spec:
             name: netbird-pgsql-postgres-pod-env
             key: AWS_SECRET_ACCESS_KEY
         {{- end }}
-        {{- if eq ((.Values.postgresql).backup).cloud "azure" }}
+        {{- if eq ((.Values.externalDatabases.coturn).backup).cloud "azure" }}
         azureCredentials:
           connectionString:
             name: netbird-pgsql-postgres-pod-env
@@ -66,12 +66,12 @@ spec:
         wal:
           maxParallel: 8
   {{- end }}
-  {{- if (.Values.postgresql).backup }}
+  {{- if (.Values.externalDatabases.coturn).backup }}
   backup:
     barmanObjectStore:
-      destinationPath: {{ ((.Values.postgresql).backup).destinationPath }}
-      endpointURL: {{ ((.Values.postgresql).backup).endpointURL }}
-      {{- if eq ((.Values.postgresql).backup).cloud "aws" }}
+      destinationPath: {{ ((.Values.externalDatabases.coturn).backup).destinationPath }}
+      endpointURL: {{ ((.Values.externalDatabases.coturn).backup).endpointURL }}
+      {{- if eq ((.Values.externalDatabases.coturn).backup).cloud "aws" }}
       s3Credentials:
         accessKeyId:
           name: netbird-pgsql-postgres-pod-env
@@ -80,7 +80,7 @@ spec:
           name: netbird-pgsql-postgres-pod-env
           key: AWS_SECRET_ACCESS_KEY
       {{- end }}
-      {{- if eq ((.Values.postgresql).backup).cloud "azure" }}
+      {{- if eq ((.Values.externalDatabases.coturn).backup).cloud "azure" }}
       azureCredentials:
         connectionString:
           name: netbird-pgsql-postgres-pod-env
