add coturn realm support

--- a/argocd-helm-charts/netbird/values.yaml
+++ b/argocd-helm-charts/netbird/values.yaml
@@ -224,6 +224,8 @@ netbird:
           secretName: vpn.example.com
 
 coturn:
+  coturn:
+    realm: "turn.vpn.example.com"
   externalDatabase:
     enabled: true
     type: "postgresql"
