fix: HostSNI for puppetserver role, so it picks up the entire fqdns

--- a/argocd-helm-charts/puppetserver/templates/puppetdb-ingressroutetcp.yaml
+++ b/argocd-helm-charts/puppetserver/templates/puppetdb-ingressroutetcp.yaml
@@ -7,7 +7,7 @@ spec:
     - websecure
   routes:
   - kind: Rule
-    match: Host(`{{ .Values.customerid }}.puppetdb.obmondo.com`)
+    match: HostSNI(`{{ .Values.puppetserver.puppetserver.masters.fqdns.alternateServerNames }}`)
     priority: 10
     services:
     - kind: Service
