fix: helm update script when there is more then 1 dependencies and added stepca-certificates in the chart.yaml for step-ca helm chart

--- a/argocd-helm-charts/step-ca/Chart.yaml
+++ b/argocd-helm-charts/step-ca/Chart.yaml
@@ -5,3 +5,6 @@ dependencies:
   - name: step-issuer
     version: 1.9.9
     repository: https://smallstep.github.io/helm-charts
+  - name: step-certificates
+    version: 1.28.4
+    repository: https://smallstep.github.io/helm-charts
