Adding sftpgo helm chart default values in KubeAid.
Signed-off-by: Sanskar Bhushan <sanskar@obmondo.com>

--- a/argocd-helm-charts/sftpgo/values.yaml
+++ b/argocd-helm-charts/sftpgo/values.yaml
@@ -1,1 +1,14 @@
----
+sftpgo:
+  image:
+    tag: v2.6.2
+
+  ftpd:
+    enabled: true
+
+  webdavd:
+    enabled: true
+
+  replicaCount: 1
+
+  persistence:
+    enabled: true
