--- a/.gitea/workflows/promtool.yaml
+++ b/.gitea/workflows/promtool.yaml
@@ -11,7 +11,7 @@ jobs:
     name: Prometheus rule test
     runs-on: ubuntu-latest
     container:
-      image: ${{ secrets.HARBOR_REGISTRY }}/${{ vars.KUBEAID_CI_IMAGE }}:v1.2.1
+      image: ${{ secrets.HARBOR_REGISTRY }}/${{ vars.KUBEAID_CI_IMAGE }}:1.2.0
     steps:
       - name: checkout
         uses: actions/checkout@v3
