feat: added some sane default for autocert, in step-ca doc: Updated readme with some instruction to setup the step-ca feat: added support for bundle and stepclusterissuer from values file feat: added a posthook to create cert with 90 days expiry fix: enabled secret target for trust manager, since cert-manager can inject the root ca in the pod, and it can read only secret

--- a/argocd-helm-charts/step-ca/templates/bundle.yaml
+++ b/argocd-helm-charts/step-ca/templates/bundle.yaml
@@ -4,10 +4,12 @@ metadata:
   name: step-ca-bundle
 spec:
   sources:
+  - useDefaultCAs: true
   - configMap:
       name: "step-ca-step-certificates-certs"
       key: "root_ca.crt"
       namespace: "step-ca"
   target:
-    configMap:
-      key: "ca-certificates.crt"
+    namespaceSelector: {}
+    secret:
+      key: "ca.crt"
