--- a/argocd-helm-charts/step-ca/values.yaml
+++ b/argocd-helm-charts/step-ca/values.yaml
@@ -1,3 +1,39 @@
 step-issuer:
   stepClusterIssuer:
-    create: true
+    create: false
+
+step-certificates:
+  inject:
+    enabled: false
+  ca:
+    name: Kubeaid
+    dns: k8sdemo.kubeaid.io,step-ca-step-certificates.step-ca.svc.cluster.local,127.0.0.1
+    url: https://step-ca-step-certificates.step-ca.svc.cluster.local
+    provisioner:
+      name: acme
+  autocert:
+    enabled: false
+  bootstrap:
+    # 90 days
+    postInitHook: |
+      step ca provisioner update acme \
+      --max-tls-cert-duration 2160h \
+      --default-tls-cert-duration 2160h
+
+autocert:
+  autocert:
+    # 90 days
+    certLifetime: 2160h
+  step-certificates:
+    enabled: false
+    autocert:
+      enabled: false
+
+trust-manager:
+  secretTargets:
+    enabled: true
+    authorizedSecrets:
+      - step-ca-bundle
+
+stepClusterIssuer:
+  root_ca: |
