fix: url for stepclusterissuer and get namespace from release.name in step-ca, so one can deploy in a diff namespace

--- a/argocd-helm-charts/step-ca/templates/step-clusterissuer.yaml
+++ b/argocd-helm-charts/step-ca/templates/step-clusterissuer.yaml
@@ -3,14 +3,14 @@ apiVersion: certmanager.step.sm/v1beta1
 kind: StepClusterIssuer
 metadata:
   name: step-cluster-issuer
-  namespace: step-ca
+  namespace: {{ .Release.Namespace }}
 spec:
-  url: https://step-ca-step-certificates.default.svc.cluster.local
+  url: https://step-ca-step-certificates.{{ .Release.Namespace }}.svc.cluster.local
   caBundle: {{ .Values.stepClusterIssuer.root_ca }}
   provisioner:
-    name: acme
+    name: admin
     kid: {{ .Values.stepClusterIssuer.kid }}
     passwordRef:
       name: step-ca-step-certificates-provisioner-password
       key: password
-      namespace: step-ca
+      namespace: {{ .Release.Namespace }}
