--- a/argocd-helm-charts/step-ca/Chart.yaml
+++ b/argocd-helm-charts/step-ca/Chart.yaml
@@ -11,6 +11,7 @@ dependencies:
   - name: autocert
     version: 1.20.2
     repository: https://smallstep.github.io/helm-charts
+    condition: autocert.enabled
   - name: trust-manager
     version: v0.19.0
     repository: https://charts.jetstack.io
